# secrets-scanner-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
secrets_scanner/: __init__.py  cli.py  patterns.py  scanner.py
tests/fixtures/: fake_secrets.py
